# sparc

./: CMakeLists.txt  LICENSE  Makefile  QUICKSTART.md  README.md  ReadTheDocs.md  build_all.bat  build_all.sh  extract_results.sh  input_file.txt  plot_scaling_results.py  requirements.txt  run_scaling_study.sh  verify_installation.sh
benchmark/: RUN_ALL_COMPARISONS.md  analyze_cluster_results.py  benchmark.sh  benchmark_cluster.sh  benchmark_cluster_all.sh  benchmark_runner.py  compare_all_results.py  compare_implementations.py  detailed_comparison.py  final_verification.py  runtimecomp.py  visualize_benchmarks.py
cluster_results_/: input_parallel_100000_16.txt  input_parallel_100000_32.txt  input_parallel_10000_16.txt  input_parallel_10000_32.txt  input_parallel_1000_16.txt  input_parallel_1000_32.txt  input_parallel_50000_16.txt  input_parallel_50000_32.txt  input_parallel_50000_4.txt  input_parallel_50000_8.txt  input_parallel_5000_16.txt  input_parallel_5000_32.txt  input_parallel_5000_4.txt  input_parallel_5000_8.txt  output_parallel_100000_1.txt  output_parallel_100000_16.txt  output_parallel_100000_2.txt  output_parallel_100000_32.txt  output_parallel_100000_4.txt  output_parallel_100000_8.txt  output_parallel_10000_1.txt  output_parallel_10000_16.txt  output_parallel_10000_2.txt  output_parallel_10000_32.txt  output_parallel_10000_4.txt  output_parallel_10000_8.txt  output_parallel_1000_1.txt  output_parallel_1000_16.txt  output_parallel_1000_2.txt  output_parallel_1000_32.txt  (+15 more)
main_sparc_serial/: CMakeLists.txt  README.md  makefile  roofline.csv  sparc_cpp
main_sparc_serial/adv_project/advisor_survey/: advisor_survey.advixeproj
main_sparc_serial/adv_project/advisor_survey/e000/: callstacks.def  e000.advixeexp  loop_hashes.def
main_sparc_serial/adv_project/advisor_survey/e000/hs000/: hs000.advixe  metrics.advisum  threading.advisum  vectorization.advisum
main_sparc_serial/adv_project/advisor_survey/e000/hs000/config/: collection.cfg  context_values.cfg  runss.options
main_sparc_serial/adv_project/advisor_survey/e000/hs000/data.0/: 3632685-3632913.0-3632913.0.th  3632685-3632913.0-3632913.0.th.aux  3632685-3632913.0.trace  systemcollector-3632685-login05.leonardo.local.sc
main_sparc_serial/adv_project/advisor_survey/e000/hs000/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
main_sparc_serial/adv_project/advisor_survey/e000/hs000/sqlite-db/_cache_grouper_data4_dd_thread/grouper/: 0
main_sparc_serial/adv_project/advisor_survey/e000/hs000/sqlite-db/_cache_grouper_data4_global_time_interval_metrics/grouper/: 0
main_sparc_serial/adv_project/advisor_tripcounts/e000/: e000.advixeexp
main_sparc_serial/output/: simulation_output_proton.txt
main_sparc_serial/src/: main.cpp
main_sparc_serial/src/core/: save_positions.cpp  sort_particles.cpp  update_electric_field.cpp
sparc_memoryPool/: CMakeLists.txt  README.md  input_file_single_species.txt  makefile  sparc_mempool  test_input.txt
sparc_memoryPool/adv_project/advisor_survey/: advisor_survey.advixeproj
sparc_memoryPool/adv_project/advisor_survey/e000/: callstacks.def  e000.advixeexp  loop_hashes.def
sparc_memoryPool/adv_project/advisor_survey/e000/hs000/: hs000.advixe  metrics.advisum  threading.advisum  vectorization.advisum
sparc_memoryPool/adv_project/advisor_survey/e000/hs000/archive/binaries/[vdso]/8c645b8d5813baaffd3f1ea59db55ac4/: [vdso]
sparc_memoryPool/adv_project/advisor_survey/e000/hs000/config/: collection.cfg  context_values.cfg  runss.options
sparc_memoryPool/adv_project/advisor_survey/e000/hs000/data.0/: 687920-687949.0-687949.0.th  687920-687949.0-687949.0.th.aux  687920-687949.0.trace  systemcollector-687920-login05.leonardo.local.sc
sparc_memoryPool/adv_project/advisor_survey/e000/hs000/sqlite-db/: dicer.db
sparc_memoryPool/adv_project/advisor_survey/e000/hs000/sqlite-db/_cache_grouper_data4_global_time_interval_metrics/grouper/: 0
sparc_memoryPool/adv_project/advisor_tripcounts/: advisor_tripcounts.advixeproj
sparc_memoryPool/include/: ParticleSystemStdPar.h
sparc_memoryPool/include/memory_pool/: MemoryPoolAllocator.h
sparc_memoryPool/output/: simulation_output_electron.txt  simulation_output_proton.txt
sparc_memoryPool/src/: main_stdpar_full.cpp
sparc_memoryPool/src/core/: ParticleSystemStdPar.cpp  compute_energy_stdpar.cpp  save_positions_stdpar.cpp  sort_particles_stdpar.cpp  update_electric_field_stdpar.cpp  update_positions_stdpar.cpp
sparc_memoryPool/src/utils/: utils.cpp
sparc_parallel/: CMakeLists.txt  Makefile  README.md  final_positions_parallel.txt  profile_app.sh  sparc_parallel  test_input.txt
sparc_parallel/adv_project/advisor_survey/: advisor_survey.advixeproj
sparc_parallel/adv_project/advisor_survey/e000/: e000.advixeexp
sparc_parallel/adv_project/advisor_survey/e000/hs000/: hs000.advixe
sparc_parallel/adv_project/advisor_survey/e000/hs000/config/: collection.cfg  context_values.cfg  runss.options
sparc_parallel/adv_project/advisor_survey/e000/hs000/data.0/: systemcollector-685247-login05.leonardo.local.sc
sparc_parallel/adv_project/advisor_survey/e000/hs000/sqlite-db/: dicer.db
sparc_parallel/adv_project/advisor_tripcounts/: advisor_tripcounts.advixeproj
sparc_parallel/include/: ParticleSystemParallel.h  ParticleSystemStdPar.h
sparc_parallel/include/memory_pool/: MemoryPoolAllocator.h
sparc_parallel/include/utils/: utils.h
sparc_parallel/src/: main_parallel.cpp  main_stdpar.cpp
sparc_parallel/src/core/: ParticleSystemParallel.cpp  ParticleSystemStdPar.cpp  compute_energy.cpp  performance.cpp  save_positions.cpp  sort_particles.cpp  update_electric_field.cpp  update_positions.cpp  update_velocities.cpp
sparc_parallel/src/utils/: utils.cpp
sparc_parunseq/: CMakeLists.txt  README.md  input_file.txt  makefile  sparc_parunseq
sparc_parunseq/include/: ParticleSystem.h
sparc_parunseq/output/: simulation_output_electron.txt
sparc_parunseq/src/core/: ParticleSystem.cpp  compute_energy.cpp  sort_particles.cpp  update_electric_field.cpp  update_positions.cpp
sparc_parunseq/src/utils/: utils.cpp
(+200 files in other folders)
